<resources>
    <string name="app_name">Walley</string>
    <string name="diary">Diary</string>
    <string name="categories">Categories</string>
    <string name="report">Report</string>
    <string name="settings">Settings</string>
    <string name="balance">Available balance</string>
    <string name="monthly_budget">Monthly Budget</string>
    <string name="today">Today</string>
    <string name="current_month">This month</string>
    <string name="total_income">Total income</string>
    <string name="total_expenses">Total expenses</string>
    <string name="cost_breakdown">Monthly cost breakdown</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="create_category">Create category</string>
    <string name="budget_vs_expenses">%1$s spent of %2$s limit</string>
    <string name="percent">(%.2f%%)</string>
    <string name="preferred_currency">Preferred Currency</string>
    <string name="notifications">Notifications</string>
    <string name="send_notifications">Allow push notifications</string>
    <string name="budget_limit_alerts">Send alerts when budget limit is exceeded</string>
    <string name="daily_reminders">Daily reminders</string>
    <string name="data">Data</string>
    <string name="export_data">Export my data</string>
    <string name="import_data">Import my data with a file</string>
    <string name="add_transaction">Add transaction</string>
    <string name="edit_transaction">Edit transaction</string>
    <string name="type">Type</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="select_date">Select the date</string>
    <string name="new_category">New category</string>
    <string name="edit_category">Edit category</string>
    <string name="category_name">Category name</string>
    <string name="spending_limit">Spending limit</string>
    <string name="color">Color</string>
    <string name="icon">Icon</string>
    <string name="update_budget">Update budget</string>
    <string-array name="transaction_types">
        <item>Expense</item>
        <item>Income</item>
    </string-array>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="no_transactions">No transactions to display</string>
    <string name="delete_data">Delete all my data</string>
    <string name="welcome">Welcome to Walley</string>
    <string name="onboarding_desc">Track your expenses easily and stay on top of your finances.</string>
    <string name="backup_later">You can import data later from settings.</string>
    <string name="get_started">Get started</string>
</resources>