<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/current_month"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/primary_heading"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_income"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/secondary_heading"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalIncomeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$99.99"
                android:textColor="@color/primary"
                android:textSize="@dimen/normal_text" />

        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/textSecondary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_expenses"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/secondary_heading"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalExpensesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$99.99"
                android:textColor="@color/error"
                android:textSize="@dimen/normal_text" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView26"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/cost_breakdown"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/primary_heading"
        android:textStyle="bold" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/piechart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/last_30_days"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/primary_heading"
        android:textStyle="bold" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/linechart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="75dp" />
</LinearLayout>