<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fa_solid"
                android:text="\uf555"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/normal_text" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/balance"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/normal_text"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/availableBalanceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="$99.9"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/normal_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fa_solid"
                android:text="\uf4d3"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/normal_text" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/monthly_budget"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/normal_text"
                android:textStyle="bold" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar2"
            style="@android:style/Widget.Material.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="40"
            android:progressTint="@color/primary"
            android:scaleY="2.5" />

        <TextView
            android:id="@+id/budgetLimitTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/budget_vs_expenses"
            android:textColor="@color/textSecondary"
            android:textSize="@dimen/small_text" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        android:layout_margin="20dp">

        <FrameLayout
            android:id="@+id/mainframe"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/accent"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/diary_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/fa_solid"
                android:text="\uf02d"
                android:textAlignment="center"
                android:textColor="@color/background"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diary"
                android:textAlignment="center"
                android:textColor="@color/background" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/categories_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/fa_solid"
                android:text="\uf00b"
                android:textAlignment="center"
                android:textColor="@color/background"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categories"
                android:textAlignment="center"
                android:textColor="@color/background" />
        </LinearLayout>


        <TextView
            android:id="@+id/add_trans_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="0"
            android:fontFamily="@font/fa_solid"
            android:text="\uf055"
            android:textColor="@color/background"
            android:textSize="50sp" />

        <LinearLayout
            android:id="@+id/report_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/fa_solid"
                android:text="\uf200"
                android:textAlignment="center"
                android:textColor="@color/background"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report"
                android:textAlignment="center"
                android:textColor="@color/background" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/fa_solid"
                android:text="\uf013"
                android:textAlignment="center"
                android:textColor="@color/background"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textAlignment="center"
                android:textColor="@color/background" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>